Archive/b13d7544bf4e1d6c859f2267ce9e97c1-85f36b3d494cd7b170078b8b41f2a609/output
+ g++ -O2 -Wall -pedantic main.cpp
main.cpp: In function ‘int main()’:
main.cpp:43:6: error: expected ‘;’ before ‘t’
 time t;
      ^
main.cpp:43:7: warning: statement is a reference, not call, to function ‘time’ [-Waddress]
 time t;
       ^
main.cpp:43:7: warning: statement has no effect [-Wunused-value]
main.cpp:44:39: error: ‘t’ was not declared in this scope
 cout << "Initial universal time: " << t.printuniversal();
                                       ^
